--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.modal-body-animation {
+  animation: updown 800ms ease-in-out 0s 1;
+}
+
+.modal-body-animation-close {
+  animation: downup 1.1s ease-in-out 0s 1;
+}
+
+@keyframes updown {
+  0% {
+    transform: translateY(-100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes downup {
+  0% {
+    transform: translateY(0%);
+  }
+  100% {
+    transform: translateY(-200%);
+  }
+}
